# v-quansenwen_26_01_22_case1

./: Claude-haiku-4.5.txt  Claude-sonnet-4.5.txt  README.md  final_prompt.txt  grok-fast.txt  oswe-vscode-prime.txt  pyproject.toml  requirements.txt
src/fake_useragent/: __init__.py  errors.py  fake.py  log.py  settings.py  utils.py
src/fake_useragent/data/: browsers.json
tests/: conftest.py  test_api_docs.py
